Fixed padding on small viewports

--- a/client/src/components/AuthenticatedPageLayout.scss
+++ b/client/src/components/AuthenticatedPageLayout.scss
@@ -11,5 +11,5 @@
 }
 
 :local(.content) {
-  padding-top: 30px;
+  padding: 30px 5px;
 }
